swaggerize
