# roommate/roommate.go
@@ -1,8 +1,12 @@
 package roommate
 
 import (
+	"fmt"
 	"log"
+	"net/http"
 
+	"github.com/gorilla/mux"
+	"github.com/turnkeyca/monolith/auth"
 	"github.com/turnkeyca/monolith/db"
 )
 
@@ -27,4 +31,24 @@ type GenericError struct {
 
 type ValidationError struct {
 	Messages []string `json:"messages"`
+}
+
+func ConfigureRoommateRoutes(regexUuid string, router *mux.Router, logger *log.Logger, database *db.Database, authenticator *auth.Authenticator) {
+	roommateHandler := NewHandler(logger, database)
+
+	getRouter := router.Methods(http.MethodGet).Subrouter()
+	getRouter.HandleFunc(fmt.Sprintf("/api/roommate/{id:%s}", regexUuid), roommateHandler.HandleGetRoommate)
+	getRouter.Use(authenticator.AuthenticateHttp, roommateHandler.GetIdFromPath)
+
+	postRouter := router.Methods(http.MethodPost).Subrouter()
+	postRouter.HandleFunc("/api/roommate", roommateHandler.HandlePostRoommate)
+	postRouter.Use(authenticator.AuthenticateHttp, roommateHandler.GetBody)
+
+	putRouter := router.Methods(http.MethodPut).Subrouter()
+	putRouter.HandleFunc(fmt.Sprintf("/api/roommate/{id:%s}", regexUuid), roommateHandler.HandlePutRoommate)
+	putRouter.Use(authenticator.AuthenticateHttp, roommateHandler.GetBody, roommateHandler.GetIdFromPath)
+
+	deleteRouter := router.Methods(http.MethodDelete).Subrouter()
+	deleteRouter.HandleFunc(fmt.Sprintf("/api/roommate/{id:%s}", regexUuid), roommateHandler.HandleDeleteRoommate)
+	deleteRouter.Use(authenticator.AuthenticateHttp, roommateHandler.GetIdFromPath)
 }
